# ThumbyElite

./: .gitignore  CLAUDE.md  EVENTS_PLAN.md  EVENTS_TABLE.md  IndemnityRun-debug.apk  IndemnityRun-release.apk  PLAN.md  README.md  ThumbyElite-debug.apk  ThumbyElite-release.apk  indemnityrun_hotas.cfg  thumbyelite.uf2
android/: .gitignore  README.md
android/app/: build.gradle
android/app/jni/src/: Android.mk  android_main.c
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
build_lab_faces/: CMakeCache.txt  Makefile  cmake_install.cmake  thumbyelite_host  thumbyelite_host_quad
build_lab_faces/baker/: CMakeCache.txt  Makefile  cmake_install.cmake  obj2mesh
build_lab_ship/: CMakeCache.txt  Makefile  cmake_install.cmake  thumbyelite_host  thumbyelite_host_quad
build_lab_ship/baker/: CMakeCache.txt  Makefile  cmake_install.cmake
build_lab_ship/thumbyelite_baker-prefix/tmp/: thumbyelite_baker-cfgcmd.txt
build_lab_space/: CMakeCache.txt  Makefile  cmake_install.cmake  thumbyelite_host  thumbyelite_host_quad
build_lab_space/baker/: CMakeCache.txt  Makefile  cmake_install.cmake
build_lab_stn/: CMakeCache.txt  Makefile  cmake_install.cmake  thumbyelite_host  thumbyelite_host_quad
build_lab_stn/baker/: CMakeCache.txt  Makefile  cmake_install.cmake
device/: CMakeLists.txt  check_size.cmake  craft_audio_pwm.c  craft_audio_pwm.h  craft_buttons.c  craft_lcd_gc9107.c  craft_lcd_gc9107.h  craft_rumble.c  craft_rumble.h  elite_device_main.c  elite_save_fatfs.c  elite_save_flash.c
docs/: PC.md  guide.html  index.html
game/: craft_font.c  craft_font.h  econ.c  elite_ai.c  elite_ai.h  elite_audio.c  elite_audio.h  elite_collide.c  elite_combat.c  elite_combat.h  elite_ctrl.h  elite_entity.c  elite_entity.h  elite_flight.c  elite_game.c  elite_game.h  elite_input.c  elite_input.h  elite_loot.c  elite_loot.h  elite_platform.h  elite_player.c  elite_player.h  elite_proj.c  elite_proj.h  elite_rocks.c  elite_rocks.h  elite_save.c  elite_save.h  elite_ships.c  elite_ships.h  elite_types.h  elite_weapons.c  elite_weapons.h  events.c  events.h  events_data.c  galaxy_gen.c  galaxy_gen.h  mission.c  (+31 more)
host/: CMakeLists.txt  host_main.c  toolchain-mingw-w64.cmake
host/win/: DIST_README.txt  thumbyelite.rc
tools/: CMakeLists.txt  build_icon.sh  build_win.sh  fetch_sdl2_mingw.sh  install_icons.py  make_icon.py  obj2mesh.c
tools/guide/: compose_guide.py  compose_weapons.py
tools/models/: gen_ships.py  ships.mtl
